--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3400,7 +3400,7 @@ input, select, textarea {
 /* Banner */
 
 	#banner {
-		padding: 10em 0 4.75em 0 ;
+		padding: 5em 0 4.75em 0 ;
 	}
 
 		#banner .inner {
@@ -3433,7 +3433,20 @@ input, select, textarea {
 				width: 2.25em;
 			}
 
-		#banner h2 {
+			#banner .inner .image {
+				border-radius: 100%;
+				margin: 0;
+				overflow: hidden;
+				-ms-flex: 1;
+				width: 30%;
+			}
+
+				#banner .inner .image img {
+					border-radius: 100%;
+					width: 100%;
+				}
+
+		#banner h2{
 			-moz-transition: opacity 0.5s ease, -moz-transform 0.5s ease, -moz-filter 0.25s ease;
 			-webkit-transition: opacity 0.5s ease, -webkit-transform 0.5s ease, -webkit-filter 0.25s ease;
 			-ms-transition: opacity 0.5s ease, -ms-transform 0.5s ease, -ms-filter 0.25s ease;
@@ -3455,6 +3468,11 @@ input, select, textarea {
 			font-size: 2.25em;
 			margin-bottom: 0.8em;
 			padding-bottom: 0.4em;
+		}
+
+		#banner h2.main{
+			margin-bottom: 0.6em;
+			padding-bottom: 0.2em;
 		}
 
 		#banner p {
@@ -4206,4 +4224,3 @@ input, select, textarea {
 		0%    {opacity: 0; transform: translateY(-10px)}
 		100%  {opacity: 1; transform: translateY(0)}
 	  }
-	  
