--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3400,7 +3400,7 @@ input, select, textarea {
 /* Banner */
 
 	#banner {
-		padding: 5em 0 4.75em 0 ;
+		padding: 4em 0 2em 0 ;
 	}
 
 		#banner .inner {
@@ -4224,3 +4224,7 @@ input, select, textarea {
 		0%    {opacity: 0; transform: translateY(-10px)}
 		100%  {opacity: 1; transform: translateY(0)}
 	  }
+
+	h3 a{
+		border-bottom: dotted 1px rgba(255, 255, 255, 0.35);
+	}
